# stir

./: .gitignore  Cargo.toml  LICENSE-APACHE.txt  README.md  graph_script.py
benchmarking_scripts/: benchmark.sh  serial_test.sh
scripts/: .gitignore  arg.py  aurora.py  codes.py  fri.py  iop.py  ldt_params.py  main.py  opt.py  protocol.py  soundness.py  stir.py  utils.py
src/: domain.rs  ldt.rs  lib.rs  parameters.rs  utils.rs
src/crypto/: fields.rs  mod.rs
src/crypto/fs/: blake3.rs  mod.rs  poseidon.rs
src/crypto/merkle_tree/: blake2.rs  blake3.rs  mock.rs  mod.rs  poseidon.rs  sha3.rs
src/fri/: common.rs  mod.rs  parameters.rs  prover.rs  verifier.rs
src/poly_utils/: bs08.rs  fft.rs  folding.rs  interpolation.rs  mod.rs  quotient.rs
src/stir/: common.rs  mod.rs  parameters.rs  prover.rs  verifier.rs
